--- a/src/client/global-styles/variables.styl
+++ b/src/client/global-styles/variables.styl
@@ -1,10 +1,11 @@
 // Fonts
-$brand-header-font = Monaco, sans-serif;
+$brand-header-font = Monaco, sans-serif
 
 // Colors
-$brand-green = #6ACABC;
-$brand-brown = #543736;
+$brand-green = #6ACABC
+$brand-brown = #543736
 $brand-gold = #FEC500
-$brand-yellow = #FEDF00;
-$brand-red = #70CEC2;
-$brand-peach = #FCC9A4;
+$brand-yellow = #FEDF00
+$brand-red = #70CEC2
+$brand-peach = #FCC9A4
+$brand-light-background-header = #FCC9A4
