fix bug with switching to drip

--- a/src/client/courses/instructor/edit-module/edit-module.component.jade
+++ b/src/client/courses/instructor/edit-module/edit-module.component.jade
@@ -10,5 +10,4 @@ div(*ngIf="module")
     button.btn.btn-alert((click)="deleteLesson(lesson)") Delete Lesson
   
   button.btn.btn-waves(
-    (click)="addLesson()"
-    [disabled]="!canAddLesson()") Add Lesson
+    (click)="addLesson()") Add Lesson
