--- a/src/client/courses/instructor/edit-lesson/edit-drip.component.jade
+++ b/src/client/courses/instructor/edit-lesson/edit-drip.component.jade
@@ -8,13 +8,24 @@ div.edit-drip-component
           type="text"
           name="drip-title"
           [(ngModel)]="drip.title")
-
+    
+    //- Drip text
+    div.section
+      h5 Explanatory Text / Images / Video
+      div.input-field
+        textarea(
+          [htmlEditor] 
+          (onDripText)="editDrip($event)" 
+          [dripText]="drip.text")#aom-text-editor
+          
     //- Quiz
     div.section
       h5 Multiple Choice Quiz
       
       div.btn.btn-waves((click)="addQuestionQuiz()" *ngIf="!drip.questionQuiz")
         | Add Quiz
+      div.btn.btn-waves((click)="removeQuestionQuiz()" *ngIf="drip.questionQuiz")
+        | Remove Quiz
       div(*ngIf="drip.questionQuiz")
         div.input-field
           textarea#drip-question-quiz.materialize-textarea(
@@ -38,15 +49,29 @@ div.edit-drip-component
               )
 
           div.btn.btn-waves((click)="addQuestionQuizAnswer()") Add Answer
-    //- Drip text
+    //- Console Quiz
     div.section
-      h5 Explanatory Text / Images / Video
-      div.input-field
-        textarea(
-          [htmlEditor] 
-          (onDripText)="editDrip($event)" 
-          [dripText]="drip.text")#aom-text-editor
-    
+      h5 Console Quiz
+      
+      div.btn.btn-waves((click)="addConsoleQuiz()" *ngIf="!drip.consoleQuiz")
+        | Add Console Quiz
+      div.btn.btn-waves((click)="removeConsoleQuiz()" *ngIf="drip.consoleQuiz")
+        | Remove Console Quiz
+      div(*ngIf="drip.consoleQuiz")
+        div.input-field
+          textarea#drip-console-quiz.materialize-textarea(
+            [(ngModel)]="drip.consoleQuiz.question"
+            name="drip-question-quiz")
+          label(class="{{ drip.consoleQuiz.question ? 'active' : '' }}" for="drip-console-quiz") Question
+        div.ace-text-editor(
+          ace-editor
+          [(text)]="drip.consoleQuiz.answer"
+          [mode]="'r'"
+          [theme]="'twilight'"
+          [readOnly]="false"
+          (textChanged)="setConsoleQuizAnswer($event)"
+        )
+            
     //- Save
     button.btn.btn-waves((click)="persist()") Save
   
