--- a/src/client/sidebar/sidebar.component.jade
+++ b/src/client/sidebar/sidebar.component.jade
@@ -5,3 +5,19 @@ ul.side-nav#aom-sidebar
         img(src="http://artofmetrics.com/wp-content/uploads/2016/01/header-retina.png")
   li
     a#sidebar-logout((click)="logout()") Logout
+  
+  div.divider
+
+  div.section(*ngIf="sidebar.contentView === 'course'")
+    div.header {{ sidebar.course.data.name }}
+    ul.collapsible(data-collapsible="accordion")
+      li(
+        *ngFor="let module of sidebar.course.data.modules[sidebar.course.data.activeLanguage]; let moduleIdx = index;"
+        [class.disabled]="isFutureModule(moduleIdx)")
+        div.collapsible-header {{ module.name }}
+        div.collapsible-body
+          ul.collection
+            li.pointer(*ngFor="let lesson of module.lessons; let lessonIdx = index;")
+              div(
+                [class.disabled]="isFutureLesson({ moduleIdx: moduleIdx, lessonIdx: lessonIdx })"
+                (click)="loadLesson(lesson)") {{ lesson.name }}
