wip: refactoring landing page

--- a/src/client/home/home-carousel.component.jade
+++ b/src/client/home/home-carousel.component.jade
@@ -10,8 +10,8 @@
         alt="Carousel Image 1" 
         src="https://images.unsplash.com/photo-1473042904451-00171c69419d?dpr=1&auto=format&fit=crop&w=767&h=495&q=80&cs=tinysrgb&crop=")
       .carousel-caption
-        p hi
+        //- Put caption when ready
     .item.aom-item-container
       img.img-responsive.home-carousel-img(alt="Carousel Image 2" src="https://images.unsplash.com/photo-1474447202275-ba85b0fa7d82?dpr=2&auto=format&fit=crop&w=1500&h=844&q=80&cs=tinysrgb&crop=")
       .carousel-caption
-        p hi 2
+        //- Put caption when ready
