--- a/src/client/courses/instructor/edit-course/toggle-course-visibility.component.jade
+++ b/src/client/courses/instructor/edit-course/toggle-course-visibility.component.jade
@@ -1,4 +1,4 @@
-div.switch
+div.switch#toggle-course-visibility-switch
   label
     | Hidden
     input(type="checkbox" (click)="toggle()" [checked]="isVisible")
