--- a/src/client/core/view-wrapper/view-wrapper.jade
+++ b/src/client/core/view-wrapper/view-wrapper.jade
@@ -1,4 +1,4 @@
-div.loading-spinner
+main.loading-spinner
   div#spinner(*ngIf="viewState.state.hide")
     div.spinner
   div.app-content([hidden]="viewState.state.hide")
