--- a/src/client/app/app.component.styl
+++ b/src/client/app/app.component.styl
@@ -1,3 +1,13 @@
+// global styles
+
+// body
+//   display flex
+//   min-height 100vh
+//   flex-direction column
+
+// main
+//   flex 1 0 auto
+  
 #app-component
   // Padding top is necessary because of fixed bootstrap header
   
