--- a/src/index.jade
+++ b/src/index.jade
@@ -14,7 +14,19 @@ html(lang="en")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css")
     title Art Of Metrics
+    style(type='text/css').
+      body {
+        display: flex;
+        min-height: 100vh;
+        flex-direction: column;
+      }
+
+      main {
+        flex: 1 0 auto;
+        min-height: 80vh;
+      }
   body
+  
     my-app Loading...
     script(src="https://code.jquery.com/jquery-2.1.1.js")
     script(
