--- a/src/client/profile/profile.component.jade
+++ b/src/client/profile/profile.component.jade
@@ -1,1 +1,24 @@
 h2 User Account
+
+div.section(*ngIf="activeCourses")
+  h3 My Active Courses
+  div(*ngFor="let course of activeCourses")
+    div {{ course.data.name }}
+  div(*ngIf="!activeCourses.length")
+    div You aren't actively subscribed to any courses yet
+
+div.divider
+
+div.section(*ngIf="completedCourses")
+  h3 My Completed Courses
+  div(*ngIf="!completedCourses.length")
+    | You haven't completed any courses yet
+  div(*ngIf="completedCourses.length")
+    div(*ngFor="let course of completedCourses")
+      div {{ course.data.name }}
+
+//- Payment
+div.divider
+
+div.section
+  
