add edit difficulty

--- a/src/client/courses/instructor/edit-course/edit-course.component.jade
+++ b/src/client/courses/instructor/edit-course/edit-course.component.jade
@@ -21,6 +21,11 @@ div.container(*ngIf="this.course")
         (changeCoursePrice)="setCoursePrice($event)")
   div.row
     div.col.s3
+      edit-difficulty(
+        [course]="course"
+        (emitDifficulty)="setDifficulty($event)"
+      )
+    div.col.s3
       div.input-field
         input(
           name="course-photo"
