--- a/src/client/global-styles/variables.styl
+++ b/src/client/global-styles/variables.styl
@@ -1,5 +1,5 @@
 // Fonts
-$brand-header-font = Monaco, sans-serif
+$brand-header-font = Miriam Libre, Roboto Slab, sans-serif
 
 // Colors
 $brand-green = #6ACABC
