--- a/src/client/dashboard/user-dashboard.component.jade
+++ b/src/client/dashboard/user-dashboard.component.jade
@@ -1,4 +1,4 @@
 div.container
   div.row
-    student-dashboard([student]="user" *ngIf="isStudent")
-    instructor-dashboard(*ngIf="!isStudent" [instructor]="user")
+    student-dashboard([student]="user" *ngIf="!showInstructor")
+    instructor-dashboard(*ngIf="showInstructor" [instructor]="user")
