remove unnecessary inputs

--- a/src/client/dashboard/student/student-dashboard.component.jade
+++ b/src/client/dashboard/student/student-dashboard.component.jade
@@ -12,8 +12,7 @@ div.card-panel
   //- Student Description Section
   div.section
     student-description(
-      [student]="student"
-      [subscribedCourses]="subscribedCourses")
+      [student]="student")
   div.divider
 
   div.container
