re use old card

--- a/src/client/courses/student/take-course/begin-course.component.jade
+++ b/src/client/courses/student/take-course/begin-course.component.jade
@@ -20,4 +20,4 @@ div.container(*ngIf="studentCourse")
             [default]="studentCourse.data.activeLanguage"
             (toggleLanguage)="setActiveLanguage($event)")
           div.card-action
-            div.btn.btn-waves((click)="sendStartCourse()") Start Course
+            div.btn.btn-waves((click)="sendStartCourse()") Get Started
