--- a/src/client/courses/student/take-course/take-course.component.jade
+++ b/src/client/courses/student/take-course/take-course.component.jade
@@ -5,3 +5,5 @@ div(*ngIf="state === 'BEGIN'")
     (startCourse)="startCourse($event)")
 div(*ngIf="state === 'CONTINUE'")
   continue-course([studentCourse]="studentCourse" *ngIf="studentCourse")
+div(*ngIf="state === 'RESUBSCRIBE'")
+  resubscribe-course([studentCourse]="studentCourse" *ngIf="studentCourse" [instructors]="instructors")
