--- a/src/client/courses/student/take-course/resubscribe-course.component.jade
+++ b/src/client/courses/student/take-course/resubscribe-course.component.jade
@@ -1,16 +1,32 @@
 div.container
-  div.row.center-align
-    h3.header {{ studentCourse.data.name }}
-    br
-    div.col.s1.offset-s4.material-icons.expired-alert info_outline
-    div.col.s3.left-align Your subscription has expired
   div.row
-    div.col.s6.offset-s2
-      blockquote {{ studentCourse.data.description }}
-    div.col.s2
-      div.section
-        h4.header Instructors
-      div.divider
-      div.section
-        div(*ngFor="let instructor of instructors")
-          div {{ instructor.fullName() }}
+    div.col.s12
+      h2.header {{ studentCourse.data.name }}
+      div.card.horizontal
+        div.card-image
+          img(src="{{ studentCourse.data.photos[0].url }}")
+        div.card-stacked
+          div.card-content
+            course-expiration([studentCourse]="studentCourse")
+            div.row
+              div.col.s6
+                blockquote {{ studentCourse.data.description }}
+              div.col.s6
+                h5.header Taught By
+                p(*ngFor="let instructor of instructors") {{ instructor.fullName() }}
+            div.btn.btn-waves((click)="resubscribeToCourse()") Resubscribe
+            
+            
+  //- div.row
+  //-   div.col.s1.offset-s4.material-icons.expired-alert info_outline
+  //-   div.col.s3.left-align Your subscription has expired
+  //- div.row
+  //-   div.col.s6.offset-s2
+  //-     blockquote {{ studentCourse.data.description }}
+  //-   div.col.s2
+  //-     div.section
+  //-       h4.header Instructors
+  //-     div.divider
+  //-     div.section
+  //-       div(*ngFor="let instructor of instructors")
+  //-         div {{ instructor.fullName() }}
